docs: sable admin docs update

--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -11,8 +11,7 @@ ad:
   # 广告位招租😁
 
   content: |
-    [![sable-admin-ad.jpg](/assets/sable-ad_1.jpg)](https://github.com/Whbbit1999/sable)
-
+    [![sable-admin-ad.jpg](/assets/sable-ad.jpg)](https://github.com/Whbbit1999/sable)
 
 support:
   layout: markdown
