--- a/source/_data/projects.yml
+++ b/source/_data/projects.yml
@@ -206,3 +206,23 @@ vscode:
     src: /assets/wiki/vscode/logo.svg
     small: 112px
     large: 240px
+
+技术视频逐字稿:
+  index: true
+  name: 技术视频逐字稿
+  sidebar: search, ghrepo, toc, support
+  order: 1000
+  title: 技术视频逐字稿
+  subtitle: "技术视频逐字稿 | Create By Whbbit1999"
+  description: 月空人频道技术视频逐字稿，供大家参考。
+  tags: 其他
+  logo:
+    src: /assets/wiki/video/logo.svg
+    small: 112px
+    large: 240px
+  cover: true
+  sections:
+    # "快速开始": [0, 99]
+    # "基本使用": [100, 199]
+    # "代码精简": [200, 299]
+    # "进阶设定": [900, 999]
