--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -124,6 +124,11 @@
     screenshot: /assets/sites/default-cover.svg
     avatar: /assets/sites/default-logo.svg
     description:
+  - title: yesicon
+    url: https://yesicon.app/
+    screenshot: /assets/sites/default-cover.svg
+    avatar: /assets/sites/default-logo.svg
+    description:
 
 "颜色相关":
   - title: 中国传统色
