--- a/source/_data/projects.yml
+++ b/source/_data/projects.yml
@@ -34,6 +34,8 @@ sable:
     "快速开始": [0, 99]
     "基本使用": [100, 199]
     "代码精简": [200, 299]
+    "常见问题": [800, 899]
+    "其他": [900, 999]
 
 vscode:
   sidebar: [toc]
