--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -1,5 +1,4 @@
 # 侧边栏配置
-sidebar:
 menu:
   post: "[btn.blog](/)"
   wiki: "[专栏](/wiki/)"
@@ -7,23 +6,29 @@ menu:
   more: "[关于](/about/)"
 
 site_tree:
-  widgets:
-    #### 自动生成的页面 ####
-    # 主页
-    home: search, welcome, recent, ad,support, tagcloud, timeline # for home
-    # 博客索引页
-    blog_index: search_blog, recent, ad,support, timeline # for categories/tags/archives
-    # 文档索引页
-    wiki_index: search_docs, recent, ad,support, timeline # for wiki
-    # 其它（404）
-    others: search, welcome, recent, timeline # for 404 and ...
-    #### 手动创建的页面 ####
-    # 文章内页
-    post: toc, ghrepo, search, ghissues, ad,support # for pages using 'layout:post'
-    # 文档内页
-    wiki: search, ghrepo, toc, ad,support, ghissues, related # for pages using 'layout:wiki'
-    # 其它 layout:page 的页面
-    page: welcome, toc, ad,support # for custom pages using 'layout:page'
+  #### 自动生成的页面 ####
+  # 主页
+  home:
+    sidebar: search, welcome, recent, ad,support, tagcloud, timeline # for home
+  # 博客索引页
+  blog_index:
+    sidebar: search_blog, recent, ad,support, timeline # for categories/tags/archives
+  # 文档索引页
+  wiki_index:
+    sidebar: search_docs, recent, ad,support, timeline # for wiki
+  # 其它（404）
+  others:
+    sidebar: search, welcome, recent, timeline # for 404 and ...
+  #### 手动创建的页面 ####
+  # 文章内页
+  post:
+    sidebar: toc, ghrepo, search, ghissues, ad,support # for pages using 'layout:post'
+  # 文档内页
+  wiki:
+    sidebar: search, ghrepo, toc, ad,support, ghissues, related # for pages using 'layout:wiki'
+  # 其它 layout:page 的页面
+  page:
+    sidebar: welcome, toc, ad,support # for custom pages using 'layout:page'
 
 search:
   service: local_search # local_search, todo...
