--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "hexo clean && hexo server"
   },
   "hexo": {
-    "version": "7.0.0"
+    "version": "7.1.1"
   },
   "dependencies": {
     "hexo": "^7.0.0",
@@ -18,10 +18,11 @@
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-stellar": "^1.25.0"
+    "hexo-theme-stellar": "^1.26.3"
   }
 }
