--- a/source/_data/links/friends.yml
+++ b/source/_data/links/friends.yml
@@ -13,3 +13,7 @@
   cover:
   icon:
   description:
+- title: xaoxuu
+  url: https://xaoxuu.com
+  avatar: https://bu.dusays.com/2021/09/24/2f74810ceb3d3.png
+  screenshot: https://bu.dusays.com/2022/10/23/63542895cfd29.png
