--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -5,8 +5,6 @@ menubar:
     - id: post
       title: 文章
       url: /
-      # icon: solar:documents-bold-duotone
-      # theme: "#1BCDFC"
     - id: wiki
       title: 专栏
       url: "/wiki/"
@@ -25,13 +23,13 @@ site_tree:
   #### 自动生成的页面 ####
   # 主页
   home:
-    sidebar: search, welcome, recent, ad, support, tagcloud, timeline # for home
+    sidebar: lucky,search,welcome, recent, ad, support, tagcloud, timeline # for home
   # 博客索引页
   blog_index:
-    sidebar: search_blog, recent, ad,support, timeline # for categories/tags/archives
+    sidebar: search_blog, recent, ad, support, timeline # for categories/tags/archives
   # 文档索引页
   wiki_index:
-    sidebar: search_docs, recent, ad,support, timeline # for wiki
+    sidebar: search_docs, recent, ad, support, timeline # for wiki
   # 其它（404）
   others:
     sidebar: search, welcome, recent, timeline # for 404 and ...
@@ -44,7 +42,7 @@ site_tree:
     sidebar: search, toc, ghrepo, ad, support, ghissues, related # for pages using 'layout:wiki'
   # 其它 layout:page 的页面
   page:
-    sidebar: welcome, toc, ad,support # for custom pages using 'layout:page'
+    sidebar: welcome, toc, ad, support # for custom pages using 'layout:page'
 
 search:
   service: local_search # local_search, todo...
