--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -4,6 +4,12 @@ welcome:
   content: |
     本站是Whbbit1999的知识和个人博客集合站，希望您在这里玩的开心。
 
+lucky:
+  layout: markdown
+  title: 2024 开心每一天
+  content: |
+    ![lucky](/assets/2024lucky.jpg)
+
 ad:
   layout: markdown
   title: 可能是广告位吧🤨
@@ -51,9 +57,9 @@ tagcloud:
   title: 标签云
   # 标签云配置
   min_font: 12
-  max_font: 24
+  max_font: 20
   amount: 100
-  orderby: name
+  orderby: count
   order: 1 # 1, sac 升序；-1, desc 降序
   color: false # 使用颜色
   start_color: # 开始的颜色。您可使用十六进位值（'#b700ff'），rgba（rgba(183, 0, 255, 1)），hsla（hsla(283, 100%, 50%, 1)）或 颜色关键字。此变量仅在 color 参数开启时才有用。
