--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -19,30 +19,30 @@ menubar:
     # friends: "[友链](/friends/)"
     # more: "[关于](/about/)"
 
-site_tree:
-  #### 自动生成的页面 ####
-  # 主页
-  home:
-    sidebar: lucky,search,welcome, recent, ad, support, tagcloud, timeline # for home
-  # 博客索引页
-  blog_index:
-    sidebar: search_blog, recent, ad, support, timeline # for categories/tags/archives
-  # 文档索引页
-  wiki_index:
-    sidebar: search_docs, recent, ad, support, timeline # for wiki
-  # 其它（404）
-  others:
-    sidebar: search, welcome, recent, timeline # for 404 and ...
-  #### 手动创建的页面 ####
-  # 文章内页
-  post:
-    sidebar: toc, ghrepo, search, ghissues, ad, support # for pages using 'layout:post'
-  # 文档内页
-  wiki:
-    sidebar: search, toc, ghrepo, ad, support, ghissues, related # for pages using 'layout:wiki'
-  # 其它 layout:page 的页面
-  page:
-    sidebar: welcome, toc, ad, support # for custom pages using 'layout:page'
+# site_tree:
+#   #### 自动生成的页面 ####
+#   # 主页
+#   home:
+#     sidebar: lucky,search,welcome, recent, ad, support, tagcloud, timeline # for home
+#   # 博客索引页
+#   blog_index:
+#     sidebar: search_blog, recent, ad, support, timeline # for categories/tags/archives
+#   # 文档索引页
+#   wiki_index:
+#     sidebar: search_docs, recent, ad, support, timeline # for wiki
+#   # 其它（404）
+#   others:
+#     sidebar: search, welcome, recent, timeline # for 404 and ...
+#   #### 手动创建的页面 ####
+#   # 文章内页
+#   post:
+#     sidebar: toc, ghrepo, search, ghissues, ad, support # for pages using 'layout:post'
+#   # 文档内页
+#   wiki:
+#     sidebar: search, toc, ghrepo, ad, support, ghissues, related # for pages using 'layout:wiki'
+#   # 其它 layout:page 的页面
+#   page:
+#     sidebar: welcome, toc, ad, support # for custom pages using 'layout:page'
 
 search:
   service: local_search # local_search, todo...
@@ -62,7 +62,7 @@ article:
   # auto_cover: true
   # auto_banner: true
   share: [wechat, weibo, email, link]
-  type: tech # tech/story
+  type: story # tech/story
   # auto_excerpt: 200 # 文章摘要
   # related_posts:
   #   enable: true
