--- a/_config.yml
+++ b/_config.yml
@@ -46,20 +46,20 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
-highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace: "  "
-  # wrap: false
-  hljs: true
-  # wrap: true
-  # hljs: false
-prismjs:
-  enable: false
-  preprocess: true
-  line_number: true
-  tab_replace: ""
+# highlight:
+#   enable: true
+#   line_number: true
+#   auto_detect: false
+#   tab_replace: "  "
+#   # wrap: false
+#   hljs: true
+#   # wrap: true
+#   # hljs: false
+# prismjs:
+#   enable: false
+#   preprocess: true
+#   line_number: true
+#   tab_replace: ""
 # TOMORROW NIGHT
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
