--- a/source/_data/wiki/sable.yml
+++ b/source/_data/wiki/sable.yml
@@ -6,6 +6,9 @@ icon: /assets/wiki/sable/logo.svg
 cover: /assets/wiki/sable/logo.svg
 coverpage: true # 默认是 true
 description: 使用Vue3 + Pinia + typescript + unocss + Naive UI 开发，集成了一些常用的自定义组件。
+beaudar:
+  repo: Whbbit1999/wxw-blog-comments
+  "issue-term": "sable-admin"
 sidebar:
   - search:
     override: search
