--- a/source/_data/wiki/sites.yml
+++ b/source/_data/wiki/sites.yml
@@ -6,6 +6,9 @@ icon: /assets/sites/sites_wiki.svg
 cover: /assets/sites/sites_wiki.svg
 coverpage: true # 默认是 true
 description: 这里会有一些我常用的一些网站
+beaudar:
+  repo: Whbbit1999/wxw-blog-comments
+  "issue-term": "sites"
 sidebar:
   - search:
     override: search
