--- a/source/_data/wiki/video-point.yml
+++ b/source/_data/wiki/video-point.yml
@@ -6,6 +6,9 @@ icon: /assets/wiki/video/logo.svg
 cover: /assets/wiki/video/logo.svg
 coverpage: true # 默认是 true
 description: 月空人频道技术视频逐字稿，供大家参考。
+beaudar:
+  repo: Whbbit1999/wxw-blog-comments
+  "issue-term": "video-point"
 sidebar:
   - search:
     override: search
