--- a/source/_data/wiki/vscode.yml
+++ b/source/_data/wiki/vscode.yml
@@ -6,6 +6,9 @@ icon: /assets/wiki/vscode/logo.svg
 cover: /assets/wiki/vscode/logo.svg
 coverpage: true # 默认是 true
 description: 让你的vscode变得更加好用
+beaudar:
+  repo: Whbbit1999/wxw-blog-comments
+  "issue-term": "vscode-setting"
 sidebar:
   - search:
     override: search
