--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -130,13 +130,9 @@ footer:
         </script>
     </div>
 style:
-  # sidebar:
-  #   background: "#abc3"
-  #   blur: false
-  # site:
-  #   background-image: url(https://gcore.jsdelivr.net/gh/cdn-x/placeholder@1.0.14/image/site-bg1@small.webp)' # 未完全适配，慎用
-  #   blur-px: 100px
-  #   blur-bg: var(--alpha75)
+  leftbar:
+    background-image: url('')
+    blur: true
   darkmode: auto
   font-family:
     logo: '"LXGW WenKai Screen",system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
@@ -155,6 +151,13 @@ style:
     link: "hsl(207 90% 54%)" # 超链接颜色
     button: "hsl(192 98% 55%)" # 按钮颜色
     hover: "hsl(14 100% 57%)" # 按钮高亮颜色
+
+services:
+  # {% link %}
+  siteinfo:
+    # 设置 api 可以自动提取网页标题、图标，服务部署方法：https://github.com/xaoxuu/site-info-api/
+    # 接口测试通过后，把按钮的 href 部分替换成 ${href} 之后填写到下方，例如：https://api.vlts.cc/site_info/v1?url=${href}
+    api: https://api.vlts.cc/site_info/v1?url=https://whbbit.cn
 
 # comments
 comments:
