--- a/source/_data/links/css.yml
+++ b/source/_data/links/css.yml
@@ -18,3 +18,8 @@
   screenshot: /assets/sites/default-cover.svg
   avatar: /assets/sites/default-logo.svg
   description:
+- title: aceternity
+  url: https://ui.aceternity.com/
+  screenshot: /assets/sites/default-cover.svg
+  avatar: /assets/sites/default-logo.svg
+  description:
