--- a/source/_data/links/react.yml
+++ b/source/_data/links/react.yml
@@ -18,3 +18,8 @@
   screenshot: /assets/sites/default-cover.svg
   avatar: /assets/sites/default-logo.svg
   description:
+- title: dndkit
+  url: https://docs.dndkit.com/
+  screenshot: /assets/sites/default-cover.svg
+  avatar: /assets/sites/default-logo.svg
+  description: react 拖拽组件
