--- a/source/_data/links/电子书.yml
+++ b/source/_data/links/电子书.yml
@@ -63,3 +63,8 @@
   screenshot: /assets/sites/default-cover.svg
   avatar: /assets/sites/default-logo.svg
   description:
+- title: 算法通关手册（LeetCode）
+  url: https://algo.itcharge.cn/
+  screenshot: /assets/sites/default-cover.svg
+  avatar: /assets/sites/default-logo.svg
+  description:
