--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -19,6 +19,42 @@ menubar:
     # friends: "[友链](/friends/)"
     # more: "[关于](/about/)"
 
+# 站点主结构树
+site_tree:
+  home:
+    leftbar: welcome, recent
+    rightbar: timeline, tagcloud, ghuser, ad, support
+  # -- 内容类页面 -- #
+  # 博客文章内页配置
+  post:
+    menu_id: post # 未在 front-matter 中指定 menu_id 时，layout 为 post 的页面默认使用这里配置的 menu_id
+    leftbar: related, ghrepo, ghissues, recent # for pages using 'layout:post'
+    rightbar: ghrepo, toc, ghuser, ad, support
+  # 博客专栏文章内页配置
+  topic:
+    menu_id: post
+  # 文档内页配置
+  wiki:
+    menu_id: wiki # 未在 front-matter 中指定 menu_id 时，layout 为 wiki 的页面默认使用这里配置的 menu_id
+    leftbar: tree, ghissues, related, recent # for wiki
+    rightbar: ghrepo, toc, ghuser, ad, support
+  # 作者信息配置
+  author:
+    base_dir: author # 只影响自动生成的页面路径
+    menu_id: post
+    leftbar: recent, timeline
+    rightbar: timeline, ghuser, ad, support
+  # 错误页配置
+  error_page:
+    menu_id: post
+    "404": "/404.html"
+    leftbar: recent, timeline
+    rightbar: timeline
+  # 其它自定义页面配置 layout: page
+  page:
+    leftbar: recent
+    rightbar: toc, timeline, ghuser, ad, support
+
 # site_tree:
 #   #### 自动生成的页面 ####
 #   # 主页
@@ -62,7 +98,7 @@ article:
   # auto_cover: true
   # auto_banner: true
   share: [wechat, weibo, email, link]
-  type: tech # tech/story
+  # type: tech # tech/story
   # auto_excerpt: 200 # 文章摘要
   # related_posts:
   #   enable: true
@@ -81,6 +117,9 @@ footer:
     bilibili:
       icon: '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#00a4db" d="M18.223 3.086a1.25 1.25 0 0 1 0 1.768L17.08 5.996h1.17A3.75 3.75 0 0 1 22 9.746v7.5a3.75 3.75 0 0 1-3.75 3.75H5.75A3.75 3.75 0 0 1 2 17.246v-7.5a3.75 3.75 0 0 1 3.75-3.75h1.166L5.775 4.855a1.25 1.25 0 0 1 1.767-1.768l2.652 2.651c.079.08.145.166.198.258h3.213c.053-.092.12-.18.199-.259l2.651-2.651a1.25 1.25 0 0 1 1.768 0Zm.027 5.42H5.75a1.25 1.25 0 0 0-1.247 1.157l-.003.093v7.5c0 .66.51 1.2 1.157 1.247l.093.003h12.5a1.25 1.25 0 0 0 1.247-1.156l.003-.094v-7.5c0-.69-.56-1.25-1.25-1.25Zm-10 2.5c.69 0 1.25.56 1.25 1.25v1.25a1.25 1.25 0 0 1-2.5 0v-1.25c0-.69.56-1.25 1.25-1.25Zm7.5 0c.69 0 1.25.56 1.25 1.25v1.25a1.25 1.25 0 0 1-2.5 0v-1.25c0-.69.56-1.25 1.25-1.25Z"/></svg>'
       url: https://space.bilibili.com/104376935/
+    juejin:
+      icon: '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#0082ff" d="m12 14.316l7.454-5.88l-2.022-1.625L12 11.1l-.004.003l-5.432-4.288l-2.02 1.624l7.452 5.88Zm0-7.247l2.89-2.298L12 2.453l-.004-.005l-2.884 2.318l2.884 2.3Zm0 11.266l-.005.002l-9.975-7.87L0 12.088l.194.156l11.803 9.308l7.463-5.885L24 12.085l-2.023-1.624Z"/></svg>'
+      url: https://juejin.cn/user/2225067267209288/posts
   sitemap:
     "博客":
       - "[近期](/)"
@@ -97,6 +136,7 @@ footer:
       - "[licht](https://react.codeym.com/)"
       - "[vue devui](https://github.com/DevCloudFE/vue-devui)"
       - "[sable admin](https://github.com/Whbbit1999/sable)"
+      - "[sable chat ui](https://github.com/Whbbit1999/sable-chat-ui)"
   content: | # 支持 Markdown 格式
     本站由 [@Whbbit1999](/) 使用 [Stellar](https://github.com/xaoxuu/hexo-theme-stellar) 主题创建。
     本博客所有文章除特别声明外，均采用 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议，转载请注明出处。
@@ -130,10 +170,10 @@ footer:
         </script>
     </div>
 style:
-  leftbar:
-    background-image: url('')
-    blur: true
-  darkmode: auto
+  # leftbar:
+  #   background-image: url('')
+  #   blur: true
+  darkmode: auto # auto true false
   font-family:
     logo: '"LXGW WenKai Screen",system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
     body: '"LXGW WenKai Screen",system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
@@ -157,7 +197,7 @@ services:
   siteinfo:
     # 设置 api 可以自动提取网页标题、图标，服务部署方法：https://github.com/xaoxuu/site-info-api/
     # 接口测试通过后，把按钮的 href 部分替换成 ${href} 之后填写到下方，例如：https://api.vlts.cc/site_info/v1?url=${href}
-    api: https://api.vlts.cc/site_info/v1?url=https://whbbit.cn
+    api: https://api.vlts.cc/site_info/api/v1?url=https://whbbit.cn
 
 # comments
 comments:
