--- a/source/_data/links/设计相关.yml
+++ b/source/_data/links/设计相关.yml
@@ -18,3 +18,8 @@
   screenshot: /assets/sites/default-cover.svg
   avatar: /assets/sites/default-logo.svg
   description: 快速查询ICON
+- title: 动态icon
+  url: https://www.aigei.com/set/dongtaiemoji.html?page=1
+  screenshot: /assets/sites/default-cover.svg
+  avatar: /assets/sites/default-logo.svg
+  description: 快速查询ICON
