--- a/source/_data/links/friends.yml
+++ b/source/_data/links/friends.yml
@@ -17,3 +17,7 @@
   url: https://xaoxuu.com
   avatar: https://bu.dusays.com/2021/09/24/2f74810ceb3d3.png
   screenshot: https://bu.dusays.com/2022/10/23/63542895cfd29.png
+- title: 大鱼资源网
+  url: https://dayuzy.com/
+  avatar:
+  description: 靠自媒体吃饭的学长
